@@ -1,43 +1,0 @@
-<LATTICES>
-
-<LATTICE name="chain lattice" dimension="1">
-  <BASIS><VECTOR>1</VECTOR></BASIS>
-</LATTICE>
-
-<LATTICE name="square lattice" dimension="2">
-  <PARAMETER name="a" default="1"/>
-  <BASIS><VECTOR>a 0</VECTOR><VECTOR>0 a</VECTOR></BASIS>
-</LATTICE>
-
-<UNITCELL name="simple1d" dimension="1">
-  <VERTEX/>
-  <EDGE><SOURCE vertex="1" offset="0"/><TARGET vertex="1" offset="1"/></EDGE>
-</UNITCELL>
-
-<UNITCELL name="simple2d" dimension="2">
-  <VERTEX/>
-  <EDGE><SOURCE vertex="1" offset="0 0"/><TARGET vertex="1" offset="0 1"/></EDGE>
-  <EDGE><SOURCE vertex="1" offset="0 0"/><TARGET vertex="1" offset="1 0"/></EDGE>
-</UNITCELL>
-
-<LATTICEGRAPH name = "chain lattice">
-  <FINITELATTICE>
-    <LATTICE ref="chain lattice"/>
-    <EXTENT dimension="1" size ="L"/>
-    <BOUNDARY type="periodic"/>
-  </FINITELATTICE>
-  <UNITCELL ref="simple1d"/>
-</LATTICEGRAPH>
-
-<LATTICEGRAPH name = "square lattice">
-  <FINITELATTICE>
-    <LATTICE ref="square lattice"/>
-    <PARAMETER name="W" default="L"/>
-    <EXTENT dimension="1" size="L"/>
-    <EXTENT dimension="2" size="W"/>
-    <BOUNDARY type="periodic"/>
-  </FINITELATTICE>
-  <UNITCELL ref="simple2d"/>
-</LATTICEGRAPH>
-
-</LATTICES>
