@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in 557 2003-11-12 12:33:19Z wistaria $
+dnl $Id: configure.in 567 2003-11-13 09:52:09Z wistaria $
 
 dnl 
 dnl Initialization
@@ -9,14 +9,15 @@ dnl disable saving cache
 define([AC_CACHE_SAVE], )dnl
 
 AC_PREREQ(2.57)
-AC_INIT([looper], [3.0b3])
+AC_INIT([looper], 3.0b3)              dnl check here for release!
+looper_date="2003/11/12"                dnl check here for release!
+
 AC_PREFIX_DEFAULT([$HOME/ALPS])
 
 AC_DEFINE_UNQUOTED(LOOPER_VERSION, "$PACKAGE_VERSION")
-AC_DEFINE_UNQUOTED(LOOPER_DATE, "2003/11/12")
+AC_DEFINE_UNQUOTED(LOOPER_DATE, "$looper_date")
 
-AC_SUBST(PACKAGE_DATE)
-PACKAGE_DATE="2003/11/12"
+AC_MSG_NOTICE([starting configuration for ALPS/looper version $PACKAGE_VERSION ($looper_date)])
 
 dnl
 dnl check for ALPS library
@@ -31,6 +32,9 @@ else
 fi
 AC_SUBST(INCLUDE_MK)
 INCLUDE_MK="$ac_cv_alps_include_mk"
+
+AC_MSG_CHECKING([for ALPS version])
+AC_MSG_RESULT([$ac_cv_alps_version])
 
 dnl
 dnl setup C++ compiler
@@ -50,8 +54,9 @@ dnl
 
 sinclude(config/ac_lapack.m4)
 AC_LAPACK
-if test "$ac_cv_have_lapack" != yes; then
-  AC_MSG_ERROR([check for LAPACK library failed])
+AC_SUBST(TESTOK_LAPACK)
+if test "$ac_cv_have_lapack" = yes; then
+  TESTOK_LAPACK='$(TESTOK_LAPACK)'
 fi
 
 dnl
@@ -91,6 +96,5 @@ dnl
 AC_CONFIG_HEADERS(looper/config.h)
 AC_CONFIG_FILES(Makefile test/Makefile)
 AC_CONFIG_FILES(lattices.xml models.xml)
-AC_CONFIG_FILES(test/lattices.xml test/models.xml)
 AC_CONFIG_FILES(percolation-params qmc-params)
 AC_OUTPUT
